bug remains: last move not showing

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
 body{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 90vh;
+    gap: 100px;
     background-color: rgb(56, 56, 56);
 }
-#nine{
 
+#nine{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,7 +18,30 @@ body{
     width: 310px;
 }
 
+#reset{
+    background-color: white;
+    border-radius: 20px;
+    width: 100px;
+    padding: 20px;
+    text-align: center;
+}
+
 input{
     height: 90px;
     width: 90px;
+    color: rgb(61, 61, 61);
+    text-align: center;
+    font-weight: 900;
+    font-size: 50px;
+    font-family: Verdana, Tahoma, sans-serif;
+}
+input:focus {
+    outline: none;
+}
+
+#turn{
+    color: rgb(255, 255, 255);
+    font-weight: 100;
+    font-size: 20px;
+    font-family: Verdana, Tahoma, sans-serif;
 }
